[package]
name = "rust-forward"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["json"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
wreq = { version = "6.0.0-rc.23", features = ["cookies"] }
wreq-util = "3.0.0-rc.7"
serde = { version = "1.0.228", features = ["derive"] }
